# mcpt-calculator

./: README.md  config.json  main.py  pyproject.toml  requirements.txt
core/: __init__.py  calculator.py  config.py  file_saver.py  input_scanner.py
