[tool.poetry]
name = "mcpt-calculator"
version = "0.1.0"
description = "MCPT Calculator"
authors = ["Denis Medvedev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
XlsxWriter = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
